[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/themes/pause_menu_btn.tres" type="Theme" id=1]
[ext_resource path="res://assets/scripts/game_over.gd" type="Script" id=2]
[ext_resource path="res://assets/images/UI/pause_menu/Background.png" type="Texture" id=3]
[ext_resource path="res://assets/images/UI/game_over/background.png" type="Texture" id=4]
[ext_resource path="res://assets/themes/label.tres" type="Theme" id=5]
[ext_resource path="res://assets/audios/menu_select.MP3" type="AudioStream" id=6]
[ext_resource path="res://assets/audios/pause_btn.MP3" type="AudioStream" id=7]

[sub_resource type="Animation" id=2]
resource_name = "loading_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "loading_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="game_over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Menu"]
modulate = Color( 1, 0.984314, 0, 0.227451 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect2" type="TextureRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -17.5
margin_right = 144.0
margin_bottom = 17.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FALHOU NA MISSÃO"
align = 1
valign = 1

[node name="Button_Restart" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 55.0
margin_right = 75.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 1 )
text = "RECOMEÇAR"

[node name="Button_Quit" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 115.0
margin_right = 75.0
margin_bottom = 145.0
grow_horizontal = 2
theme = ExtResource( 1 )
text = "SAIR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loading_in"
anims/loading_in = SubResource( 2 )
anims/loading_out = SubResource( 3 )

[node name="audio_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="audio_btn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="focus_entered" from="Menu/Button_Restart" to="." method="_on_Button_Restart_focus_entered"]
[connection signal="pressed" from="Menu/Button_Restart" to="." method="_on_Button_Restart_pressed"]
[connection signal="focus_entered" from="Menu/Button_Quit" to="." method="_on_Button_Quit_focus_entered"]
[connection signal="pressed" from="Menu/Button_Quit" to="." method="_on_Button_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
